--- a/doc/cha-intro-tls.texi
+++ b/doc/cha-intro-tls.texi
@@ -49,9 +49,12 @@ alert protocol is above the record protocol.
 The Handshake protocol is responsible for the security parameters'
 negotiation, the initial key exchange and authentication.  
 @xref{The Handshake Protocol}, for more information about the handshake
-protocol.  The protocol layering in TLS is shown in the figure below.
+protocol.  The protocol layering in TLS is shown in @ref{fig:tls-layers}.
 
-@center @image{gnutls-layers,12cm}
+@float Figure,fig:tls-layers
+@image{gnutls-layers,12cm}
+@caption{The TLS protocol layers.}
+@end float
 
 @node The transport layer
 @section The Transport Layer
