--- a/doc/latex/fdl.tex
+++ b/doc/latex/fdl.tex
@@ -4,8 +4,8 @@
 \addcontentsline{toc}{chapter}{GNU Free Documentation License}
 %\label{label_fdl}
 
- \begin{center}
-
+\begin{center}
+{\small
        Version 1.3, 3 November 2008
 
 
@@ -13,18 +13,20 @@
  
  \bigskip
  
-     <http://fsf.org/>
+     http://fsf.org/
   
  \bigskip
  
  Everyone is permitted to copy and distribute verbatim copies
  of this license document, but changing it is not allowed.
+}
 \end{center}
 
 
 \begin{center}
-{\bf\large Preamble}
+{\bf\small Preamble}
 \end{center}
+{\tiny 
 
 The purpose of this License is to make a manual, textbook, or other
 functional and useful document ``free'' in the sense of freedom: to
@@ -47,12 +49,14 @@ it can be used for any textual work, regardless of subject matter or
 whether it is published as a printed book.  We recommend this License
 principally for works whose purpose is instruction or reference.
 
-
+}
 \begin{center}
-{\Large\bf 1. APPLICABILITY AND DEFINITIONS\par}
+{\small\bf 1. APPLICABILITY AND DEFINITIONS\par}
 \phantomsection
 \addcontentsline{toc}{section}{1. APPLICABILITY AND DEFINITIONS}
 \end{center}
+
+{\tiny 
 
 This License applies to any manual or other work, in any medium, that
 contains a notice placed by the copyright holder saying it can be
@@ -141,14 +145,15 @@ Disclaimers are considered to be included by reference in this
 License, but only as regards disclaiming warranties: any other
 implication that these Warranty Disclaimers may have is void and has
 no effect on the meaning of this License.
-
+}
 
 \begin{center}
-{\Large\bf 2. VERBATIM COPYING\par}
+{\small\bf 2. VERBATIM COPYING\par}
 \phantomsection
 \addcontentsline{toc}{section}{2. VERBATIM COPYING}
 \end{center}
 
+{\tiny
 You may copy and distribute the Document in any medium, either
 commercially or noncommercially, provided that this License, the
 copyright notices, and the license notice saying this License applies
@@ -161,14 +166,15 @@ number of copies you must also follow the conditions in section~3.
 
 You may also lend copies, under the same conditions stated above, and
 you may publicly display copies.
-
+}
 
 \begin{center}
-{\Large\bf 3. COPYING IN QUANTITY\par}
+{\small\bf 3. COPYING IN QUANTITY\par}
 \phantomsection
 \addcontentsline{toc}{section}{3. COPYING IN QUANTITY}
 \end{center}
 
+{\tiny
 
 If you publish printed copies (or copies in media that commonly have
 printed covers) of the Document, numbering more than 100, and the
@@ -205,12 +211,14 @@ It is requested, but not required, that you contact the authors of the
 Document well before redistributing any large number of copies, to give
 them a chance to provide you with an updated version of the Document.
 
-
+}
 \begin{center}
-{\Large\bf 4. MODIFICATIONS\par}
+{\small\bf 4. MODIFICATIONS\par}
 \phantomsection
 \addcontentsline{toc}{section}{4. MODIFICATIONS}
 \end{center}
+
+{\tiny
 
 You may copy and distribute a Modified Version of the Document under
 the conditions of sections 2 and 3 above, provided that you release
@@ -324,14 +332,15 @@ permission from the previous publisher that added the old one.
 The author(s) and publisher(s) of the Document do not by this License
 give permission to use their names for publicity for or to assert or
 imply endorsement of any Modified Version.
-
+}
 
 \begin{center}
-{\Large\bf 5. COMBINING DOCUMENTS\par}
+{\small\bf 5. COMBINING DOCUMENTS\par}
 \phantomsection
 \addcontentsline{toc}{section}{5. COMBINING DOCUMENTS}
 \end{center}
 
+{\tiny
 
 You may combine the Document with other documents released under this
 License, under the terms defined in section~4 above for modified
@@ -354,13 +363,15 @@ in the various original documents, forming one section Entitled
 ``History''; likewise combine any sections Entitled ``Acknowledgements'',
 and any sections Entitled ``Dedications''.  You must delete all sections
 Entitled ``Endorsements''.
+}
 
 \begin{center}
-{\Large\bf 6. COLLECTIONS OF DOCUMENTS\par}
+{\small\bf 6. COLLECTIONS OF DOCUMENTS\par}
 \phantomsection
 \addcontentsline{toc}{section}{6. COLLECTIONS OF DOCUMENTS}
 \end{center}
 
+{\tiny
 You may make a collection consisting of the Document and other documents
 released under this License, and replace the individual copies of this
 License in the various documents with a single copy that is included in
@@ -371,14 +382,15 @@ You may extract a single document from such a collection, and distribute
 it individually under this License, provided you insert a copy of this
 License into the extracted document, and follow this License in all
 other respects regarding verbatim copying of that document.
-
+}
 
 \begin{center}
-{\Large\bf 7. AGGREGATION WITH INDEPENDENT WORKS\par}
+{\small\bf 7. AGGREGATION WITH INDEPENDENT WORKS\par}
 \phantomsection
 \addcontentsline{toc}{section}{7. AGGREGATION WITH INDEPENDENT WORKS}
 \end{center}
 
+{\tiny
 
 A compilation of the Document or its derivatives with other separate
 and independent documents or works, in or on a volume of a storage or
@@ -396,14 +408,15 @@ covers that bracket the Document within the aggregate, or the
 electronic equivalent of covers if the Document is in electronic form.
 Otherwise they must appear on printed covers that bracket the whole
 aggregate.
-
+}
 
 \begin{center}
-{\Large\bf 8. TRANSLATION\par}
+{\small\bf 8. TRANSLATION\par}
 \phantomsection
 \addcontentsline{toc}{section}{8. TRANSLATION}
 \end{center}
 
+{\tiny
 
 Translation is considered a kind of modification, so you may
 distribute translations of the Document under the terms of section~4.
@@ -422,15 +435,16 @@ If a section in the Document is Entitled ``Acknowledgements'',
 ``Dedications'', or ``History'', the requirement (section~4) to Preserve
 its Title (section~1) will typically require changing the actual
 title.
-
+}
 
 \begin{center}
-{\Large\bf 9. TERMINATION\par}
+{\small\bf 9. TERMINATION\par}
 \phantomsection
 \addcontentsline{toc}{section}{9. TERMINATION}
 \end{center}
 
 
+{\tiny
 You may not copy, modify, sublicense, or distribute the Document
 except as expressly provided under this License.  Any attempt
 otherwise to copy, modify, sublicense, or distribute it is void, and
@@ -455,15 +469,16 @@ licenses of parties who have received copies or rights from you under
 this License.  If your rights have been terminated and not permanently
 reinstated, receipt of a copy of some or all of the same material does
 not give you any rights to use it.
-
+}
 
 \begin{center}
-{\Large\bf 10. FUTURE REVISIONS OF THIS LICENSE\par}
+{\small\bf 10. FUTURE REVISIONS OF THIS LICENSE\par}
 \phantomsection
 \addcontentsline{toc}{section}{10. FUTURE REVISIONS OF THIS LICENSE}
 \end{center}
 
 
+{\tiny
 The Free Software Foundation may publish new, revised versions
 of the GNU Free Documentation License from time to time.  Such new
 versions will be similar in spirit to the present version, but may
@@ -482,14 +497,15 @@ specifies that a proxy can decide which future versions of this
 License can be used, that proxy's public statement of acceptance of a
 version permanently authorizes you to choose that version for the
 Document.
-
+}
 
 \begin{center}
-{\Large\bf 11. RELICENSING\par}
+{\small\bf 11. RELICENSING\par}
 \phantomsection
 \addcontentsline{toc}{section}{11. RELICENSING}
 \end{center}
 
+{\tiny
 
 ``Massive Multiauthor Collaboration Site'' (or ``MMC Site'') means any
 World Wide Web server that publishes copyrightable works and also
@@ -517,14 +533,15 @@ and (2) were thus incorporated prior to November 1, 2008.
 The operator of an MMC Site may republish an MMC contained in the site
 under CC-BY-SA on the same site at any time before August 1, 2009,
 provided the MMC is eligible for relicensing.
-
+}
 
 \begin{center}
-{\Large\bf ADDENDUM: How to use this License for your documents\par}
+{\small\bf ADDENDUM: How to use this License for your documents\par}
 \phantomsection
 \addcontentsline{toc}{section}{ADDENDUM: How to use this License for your documents}
 \end{center}
 
+{\tiny
 To use this License in a document you have written, include a copy of
 the License in the document and put the following copyright and
 license notices just after the title page:
@@ -560,4 +577,5 @@ recommend releasing these examples in parallel under your choice of
 free software license, such as the GNU General Public License,
 to permit their use in free software.
 
+}
 %---------------------------------------------------------------------
